[gd_scene load_steps=20 format=3 uid="uid://bpt2hb1tomxi2"]

[ext_resource type="Script" path="res://scripts/menus/menu.gd" id="1_q7gmv"]
[ext_resource type="Script" path="res://scripts/paralax_clouds.gd" id="2_lkhie"]
[ext_resource type="Texture2D" uid="uid://ixxnq7ysh7b1" path="res://assets/textures/levels/tileset0.png" id="3_14xbp"]
[ext_resource type="Texture2D" uid="uid://b46y3f5j5fnpr" path="res://assets/textures/backgrounds/CloudsBack.png" id="3_pw80o"]
[ext_resource type="Texture2D" uid="uid://cj1mxx0pfvglc" path="res://assets/textures/backgrounds/CloudsFront.png" id="4_tsfbw"]
[ext_resource type="FontFile" uid="uid://bu638ev4rorqq" path="res://assets/fonts/ThaleahFat.ttf" id="4_vm2ku"]
[ext_resource type="Theme" uid="uid://ccjdu7nrsjjwa" path="res://assets/fonts/font_theme.tres" id="4_ylmq2"]
[ext_resource type="Texture2D" uid="uid://c2w03t87biyik" path="res://assets/textures/backgrounds/MountainsBack.png" id="5_i40om"]
[ext_resource type="Texture2D" uid="uid://cdakvk8835pgu" path="res://assets/textures/backgrounds/MountainsFront.png" id="6_dr4q5"]
[ext_resource type="AudioStream" uid="uid://btc5kqyoeupqn" path="res://assets/sounds/music_menu_CREDIT_Trevor_Kentz.mp3" id="6_ulpo8"]
[ext_resource type="PackedScene" uid="uid://dlnxc7wabtpow" path="res://scenes/other/button.tscn" id="10_mffp8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_shns0"]
texture = ExtResource("3_14xbp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
0:6/0 = 0
2:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0

[sub_resource type="TileSet" id="TileSet_dys3a"]
sources/0 = SubResource("TileSetAtlasSource_shns0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7jek"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kaba"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iq7gi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ln4xm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwq61"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_npxxk"]
default_font = ExtResource("4_vm2ku")
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 25
Button/fonts/font = ExtResource("4_vm2ku")
Button/styles/disabled = SubResource("StyleBoxFlat_q7jek")
Button/styles/focus = SubResource("StyleBoxFlat_5kaba")
Button/styles/hover = SubResource("StyleBoxFlat_iq7gi")
Button/styles/normal = SubResource("StyleBoxEmpty_ln4xm")
Button/styles/pressed = SubResource("StyleBoxFlat_fwq61")

[node name="Menu" type="Node2D"]
script = ExtResource("1_q7gmv")

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ulpo8")
volume_db = -25.0
autoplay = true

[node name="SkyBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_lkhie")

[node name="SkyBack" type="ParallaxLayer" parent="SkyBackground"]
motion_scale = Vector2(0.1, 0)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="SkyBackground/SkyBack"]
position = Vector2(64, 64)
texture = ExtResource("3_pw80o")

[node name="SkyFront" type="ParallaxLayer" parent="SkyBackground"]
motion_scale = Vector2(0.5, 0)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="SkyBackground/SkyFront"]
position = Vector2(64, 64)
texture = ExtResource("4_tsfbw")

[node name="MountainsBackground" type="ParallaxBackground" parent="."]

[node name="BackMountains" type="ParallaxLayer" parent="MountainsBackground"]
motion_scale = Vector2(0.015, 0)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="MountainsBackground/BackMountains"]
position = Vector2(65, 11)
texture = ExtResource("5_i40om")

[node name="FrontMountains" type="ParallaxLayer" parent="MountainsBackground"]
motion_scale = Vector2(0.03, 0)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="MountainsBackground/FrontMountains"]
position = Vector2(49, 29)
texture = ExtResource("6_dr4q5")

[node name="MenuMap" type="TileMap" parent="."]
process_mode = 1
position = Vector2(-2, 2)
tile_set = SubResource("TileSet_dys3a")
format = 2
layer_0/name = "main_menu"
layer_0/tile_data = PackedInt32Array(65539, 0, 0, 131075, 0, 1, 196611, 0, 2, 131076, 65536, 1, 131077, 65536, 1, 131078, 65536, 1, 131079, 65536, 1, 131080, 65536, 1, 131081, 65536, 1, 131082, 65536, 1, 131083, 65536, 1, 131084, 65536, 1, 131085, 65536, 1, 131086, 65536, 1, 131087, 65536, 1, 131088, 131072, 1, 196624, 131072, 2, 65552, 131072, 0, 196612, 65536, 2, 196613, 65536, 2, 196614, 65536, 2, 196615, 65536, 2, 196616, 65536, 2, 196617, 65536, 2, 196618, 65536, 2, 196619, 65536, 2, 196620, 65536, 2, 196621, 65536, 2, 196622, 65536, 2, 196623, 65536, 2, 65540, 65536, 0, 65541, 65536, 0, 65542, 65536, 0, 65543, 65536, 0, 65544, 65536, 0, 65545, 65536, 0, 65546, 65536, 0, 65547, 65536, 0, 65548, 65536, 0, 65549, 65536, 0, 65550, 65536, 0, 65551, 65536, 0, 393223, 720896, 2, 393224, 720896, 2, 393225, 720896, 2, 393226, 720896, 2, 393227, 720896, 2, 393228, 720896, 2, 393229, 720896, 2, 524296, 720896, 2, 524297, 720896, 2, 524298, 720896, 2, 524299, 720896, 2, 524300, 786432, 2, 655367, 720896, 2, 655368, 720896, 2, 655369, 720896, 2, 655370, 720896, 2, 655371, 720896, 2, 655372, 720896, 2, 393230, 851968, 2, 655373, 786432, 2, 655366, 655360, 2, 524295, 655360, 2, 393222, 655360, 2, 524301, 851968, 2, 655374, 851968, 2)

[node name="TitleText" type="RichTextLabel" parent="MenuMap"]
offset_left = 74.0
offset_top = 25.0
offset_right = 256.0
offset_bottom = 65.0
theme = ExtResource("4_ylmq2")
theme_override_font_sizes/normal_font_size = 32
text = "skylighter 2"

[node name="StartGame" type="Button" parent="MenuMap"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 109.0
offset_top = 81.0
offset_right = 230.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_npxxk")
text = "Start Game"

[node name="CreditsView" type="Button" parent="MenuMap"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 127.0
offset_top = 112.0
offset_right = 210.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_npxxk")
text = "Credits"

[node name="QuitGame" type="Button" parent="MenuMap"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 118.0
offset_top = 146.0
offset_right = 220.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_npxxk")
text = "Quit Game"

[node name="Arena" parent="MenuMap" instance=ExtResource("10_mffp8")]
offset_left = 235.0
offset_top = 157.0
offset_right = 318.0
offset_bottom = 172.0
text = "Arena Mode"

[connection signal="pressed" from="MenuMap/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MenuMap/CreditsView" to="." method="_on_credits_view_pressed"]
[connection signal="pressed" from="MenuMap/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="MenuMap/Arena" to="." method="_on_arena_pressed"]
